tests/compile_fail/handle_scope_escape_to_nowhere.stderr
error[E0277]: the trait bound `OwnedIsolate: v8::scope::param::NewEscapableHandleScope<'_, '_>` is not satisfied
   --> tests/compile_fail/handle_scope_escape_to_nowhere.rs:5:50
    |
5   |   let mut _scope = v8::EscapableHandleScope::new(&mut isolate);
    |                    ----------------------------- ^^^^^^^^^^^^ the trait `v8::scope::param::NewEscapableHandleScope<'_, '_>` is not implemented for `OwnedIsolate`
    |                    |
    |                    required by a bound introduced by this call
    |
    = help: the following other types implement trait `v8::scope::param::NewEscapableHandleScope<'s, 'e>`:
              <CallbackScope<'p, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
              <ContextScope<'p, P> as v8::scope::param::NewEscapableHandleScope<'s, 'e>>
              <EscapableHandleScope<'p, 'e, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
              <HandleScope<'p, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
              <TryCatch<'p, P> as v8::scope::param::NewEscapableHandleScope<'s, 'e>>
note: required by a bound in `EscapableHandleScope::<'s, 'e>::new`
   --> src/scope.rs
    |
    |   pub fn new<P: param::NewEscapableHandleScope<'s, 'e>>(
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EscapableHandleScope::<'s, 'e>::new`

error[E0277]: the trait bound `OwnedIsolate: v8::scope::param::NewEscapableHandleScope<'_, '_>` is not satisfied
 --> tests/compile_fail/handle_scope_escape_to_nowhere.rs:5:20
  |
5 |   let mut _scope = v8::EscapableHandleScope::new(&mut isolate);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `v8::scope::param::NewEscapableHandleScope<'_, '_>` is not implemented for `OwnedIsolate`
  |
  = help: the following other types implement trait `v8::scope::param::NewEscapableHandleScope<'s, 'e>`:
            <CallbackScope<'p, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
            <ContextScope<'p, P> as v8::scope::param::NewEscapableHandleScope<'s, 'e>>
            <EscapableHandleScope<'p, 'e, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
            <HandleScope<'p, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
            <TryCatch<'p, P> as v8::scope::param::NewEscapableHandleScope<'s, 'e>>

error[E0277]: the trait bound `OwnedIsolate: v8::scope::param::NewEscapableHandleScope<'_, '_>` is not satisfied
 --> tests/compile_fail/handle_scope_escape_to_nowhere.rs:5:20
  |
5 |   let mut _scope = v8::EscapableHandleScope::new(&mut isolate);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `v8::scope::param::NewEscapableHandleScope<'_, '_>` is not implemented for `OwnedIsolate`
  |
  = help: the following other types implement trait `v8::scope::param::NewEscapableHandleScope<'s, 'e>`:
            <CallbackScope<'p, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
            <ContextScope<'p, P> as v8::scope::param::NewEscapableHandleScope<'s, 'e>>
            <EscapableHandleScope<'p, 'e, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
            <HandleScope<'p, C> as v8::scope::param::NewEscapableHandleScope<'s, 'p>>
            <TryCatch<'p, P> as v8::scope::param::NewEscapableHandleScope<'s, 'e>>
